style(Accordion): fix issue with content overflowing when collapsed

--- a/packages/styles/scss/components/accordion/_accordion.scss
+++ b/packages/styles/scss/components/accordion/_accordion.scss
@@ -144,7 +144,8 @@ $content-padding: 0 0 0 $spacing-05 !default;
   }
 
   .#{$prefix}--accordion__wrapper {
-    // Properties for when the accordion closes
+    // Properties for when the accordion is closed
+    overflow: hidden;
     padding: 0;
     max-block-size: 0;
     opacity: 0;
@@ -199,7 +200,7 @@ $content-padding: 0 0 0 $spacing-05 !default;
     overflow: visible;
 
     .#{$prefix}--accordion__wrapper {
-      // Properties for when the accordion opens
+      // Properties for when the accordion is open
       max-block-size: fit-content;
       opacity: 1;
       padding-block: $spacing-03;
